# dbt-database-adapter-scaffold

./: CONTRIBUTING.md  License.md  README.md  cookiecutter.json  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  dependabot.yml  version.yml
.github/workflow/: tests.yml
.github/workflows/: tests.yml  version.yml
docs/arch/: README.md  adr-001-new-adapter-scaffolding.md
hooks/: pre_gen_project.py
tests/: conftest.py  template_test.py
{{cookiecutter.project_name}}/: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  README.md  bumpversion.cfg  dev-requirements.txt  dev_requirements.txt  setup.py  test.env  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: main.yml
{{cookiecutter.project_name}}/dbt/: setup.py
{{cookiecutter.project_name}}/dbt/adapters/{{cookiecutter.directory_name}}/: __init__.py  __version__.py  connections.py  impl.py  imply.py
{{cookiecutter.project_name}}/dbt/include/{{cookiecutter.directory_name}}/: __init__.py  dbt_project.yml  profile_template.yml  sample_profiles.yml
{{cookiecutter.project_name}}/dbt/include/{{cookiecutter.directory_name}}/macros/: adapters.sql  catalog.sql
{{cookiecutter.project_name}}/test/: {{cookiecutter.adapter}}.dbtspec  {{cookiecutter.directory_name}}.dbtspec
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/tests/functional/adapter/: test_basic.py
